--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Will you be my Valentine?🥹❤️" />
+    <meta name="description" content="Lala, will you be my Valentine?🥹❤️" />
     <meta name="author" content="Subhadeep Roy" />
     <meta name="robots" content="index, follow" />
     <meta name="og:title" content="Be my Valentine?❤️" />
     <meta name="og:description" content="Will you be my Valentine and make this February sweeter with your smile, laughter, and a little love always so ya? 🥹❤️" />
     <meta name="og:image" content="https://i.postimg.cc/x1Gj6Vr0/og-valentine.webp" />
-    <meta name="og:url" content="https://for-valentine.netlify.app/" />
+    <meta name="og:url" content="https://lala-valentine.netlify.app/" />
     <meta name="og:site_name" content="Be my Valentine?❤️" />
     <meta name="og:type" content="website" />
     <meta name="google-site-verification" content="virFF3hv9XSKqHm5DKiyimEXYcOydvReT-mIeM_CKNQ" />
