--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       name="twitter:image"
       content="https://i.postimg.cc/x1Gj6Vr0/og-valentine.webp"
     />
-    <meta name="twitter:url" content="https://for-valentine.netlify.app/" />
+    <meta name="twitter:url" content="https://lala-valentine.netlify.app/" />
     <meta name="twitter:creator" content="@mvp_Subha" />
     <title>Be my Valentine? ❤️</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
