--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="https://i.postimg.cc/x1Gj6Vr0/og-valentine.webp"
     />
     <meta name="twitter:url" content="https://lala-valentine.netlify.app/" />
-    <meta name="twitter:creator" content="@mvp_Subha" />
+    <meta name="twitter:creator" content="@_MCMLXXXVI" />
     <title>Be my Valentine? ❤️</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
